# ACM_club

./: .gitignore  CMakeLists.txt  README.md  characters.txt  images.txt  main.cpp  screens.txt
data/: characters.txt  images.txt  screens.txt
scripts/: __globals.lua  _init_backgrounds.lua  _init_characters.lua  globals.lua  sample.lua  sample1.lua  sample2.lua  sample3.lua
scripts/tasks/: list.lua
scripts/tasks/a+b/: checker.lua  description.lua  test_gen.lua
src/: acmp.cpp  acmp.hpp  env.cpp  env.hpp  homework.cpp  homework.hpp  json.hpp  main.cpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp
texts/: dialogs.txt  ui.txt
